# smokeDetection-yolov5

./: CMakeLists.txt  README.md  main.cpp
